@@ -39,3 +39,4 @@ shoes.shp
 triple_xbow.shp
 pants.shp
 collar.shp
+hoods.shp
